--- a/index.html
+++ b/index.html
@@ -4,17 +4,50 @@
 	<meta charset="UTF-8">
 	<title>Basic Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 </head>
 <body>
-	<div id = "aboutMe">
-		<header>
-			<h1 id="topbox">Caden Mayo</h1>
-			<h2 id="links"><a href="index.html">About</a> |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></h2>
-		</header>
-		<div id="container1">
-						
-		</div>
-	</div>
-
+ <table border=5>
+ 	<tr>
+ 		<td id= columnOne>&nbsp;</td>
+ 		<td id="nameBox" style="vertical-align: middle">Caden Mayo</td>
+ 		<td id="blankSpace">&nbsp;</td>
+ 		<td id=linkBox style="vertical-align: middle"><h2 id="links"><a href="index.html">About</a> |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></h2></td>
+ 		<td id="backSide">&nbsp;</td>
+	</tr>
+	<tr>
+		<td id="spacerBarUp" colspan="5">&nbsp;</td>
+	</tr>
+	<tr style="height: 20vh;">
+ 		<td>&nbsp;</td>
+ 		<td rowspan="2" id="bioBox" style="vertical-align: top;">
+ 		<h2 style="color: #4aaaa5; font-size: 6vh; font-family: 'Georgia', Times, 'Times New Roman',serif;"">About Me</h2>
+ 		<hr>
+ 		<img id=imagic src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-1/p240x240/19702071_10213277125633213_7631345611309927163_n.jpg?oh=ada5c5938224c50efc10127e5ba9d384&amp;oe=5A0EA378" alt ="Picture of Caden Mayo">
+ 		Most of the people visiting this page probably already know who I am. But in case you don't, My name is Caden Mayo and it's my dream to go into game design and programming. However dreams rarely come to fruition in my experience, so I'm working at getting a career and bettering myself in a productive and still enjoyable way. That is to say I'm working on learning full stack web development. As for things I like, I'm a major fan of video games, especially rpgs. Feel free to browse this site to see my work and get in contact with me!
+		</td>
+		<td>&nbsp;</td>
+		<td id="contactLinks">
+		<h2 style="color: #4aaaa5; font-size: 4vh;">Connect With Me</h2>
+		<hr>
+		<a href="https://github.com/CadenMay0"><img src="assets/images/if_github_401441.png" style="height: 10vh; width: 10vh;" alt="Github"></a>
+		<a href="https://www.linkedin.com/in/joseph-mayo-4a6773144/"><img src="assets/images/if_linkedin_395524.png" style="height: 10vh; width: 10vh;" alt="Linkedin"></a>
+		<a href="https://stackoverflow.com/users/8313831/c-mayo"><img src="assets/images/if_stackoverflow_273179.png" style="height: 10vh; width: 10vh;" alt="StackOverflow"></a>
+		</td>
+	</tr>
+	<tr>
+		<td id="underBox" colspan="1">&nbsp;</td>
+		<td colspan="3">&nbsp;</td>
+	</tr>
+	<tr>
+		<td id="spacerBarLow" colspan="5">&nbsp;</td>
+	</tr>
+	<tr>
+		<td colspan="5" style="height: 1vh;"><hr style="color: green; padding-bottom: 1vh; background-color: green; margin: 0;"></td>
+	</tr>
+	<tr>
+		<td id="copyright" colspan=5 style="text-align: center; vertical-align: middle;">&copy; 2017 Caden Mayo</td>
+	</tr>
+</table>
 </body>
 </html>
