--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<title>Basic Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/cave-story" type="text/css"/>
+	<link href="https://fonts.googleapis.com/css?family=Atomic+Age|Francois+One" rel="stylesheet">
+	<script src="https://use.fontawesome.com/a719189ac1.js"></script>
 </head>
 <body>
  <table border=5>
@@ -21,10 +24,10 @@
 	<tr style="height: 20vh;">
  		<td>&nbsp;</td>
  		<td rowspan="2" id="bioBox" style="vertical-align: top;">
- 		<h2 style="color: #4aaaa5; font-size: 6vh; font-family: 'Georgia', Times, 'Times New Roman',serif;"">About Me</h2>
+ 		<h2 style="color: #4aaaa5; font-size: 6vh;font-family: 'Atomic Age', cursive;">About Me</h2>
  		<hr>
- 		<img id=imagic src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-1/p240x240/19702071_10213277125633213_7631345611309927163_n.jpg?oh=ada5c5938224c50efc10127e5ba9d384&amp;oe=5A0EA378" alt ="Picture of Caden Mayo">
- 		Most of the people visiting this page probably already know who I am. But in case you don't, My name is Caden Mayo and it's my dream to go into game design and programming. However dreams rarely come to fruition in my experience, so I'm working at getting a career and bettering myself in a productive and still enjoyable way. That is to say I'm working on learning full stack web development. As for things I like, I'm a major fan of video games, especially rpgs. Feel free to browse this site to see my work and get in contact with me!
+ 		<img id=imagic src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-1/p240x240/19702071_10213277125633213_7631345611309927163_n.jpg?oh=ada5c5938224c50efc10127e5ba9d384&amp;oe=5A0EA378" alt ="Picture of Caden Mayo" >
+ 		<p style="font-family: 'CaveStoryRegular';">Most of the people visiting this page probably already know who I am. But in case you don't, My name is Caden Mayo and it's my dream to go into game design and programming. However dreams rarely come to fruition in my experience, so I'm working at getting a career and bettering myself in a productive and still enjoyable way. That is to say I'm working on learning full stack web development. As for things I like, I'm a major fan of video games, especially rpgs. Feel free to browse this site to see my work and get in contact with me!</p>
 		</td>
 		<td>&nbsp;</td>
 		<td id="contactLinks">
