--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  		<td id= columnOne>&nbsp;</td>
  		<td id="nameBox" style="vertical-align: middle">Caden Mayo</td>
  		<td id="blankSpace">&nbsp;</td>
- 		<td id=linkBox style="vertical-align: middle"><h2 id="links"><a href="index.html">About</a> |  <a href="portfolio.html">Portfolio</a>  |  <a href="contact.html">Contact</a></h2></td>
+ 		<td id=linkBox style="vertical-align: middle"><h2 id="links"><a class="topLinks" href="index.html">About</a> |  <a class="topLinks" href="portfolio.html" title="Portfolio">Portfolio</a>  |  <a class="topLinks"  href="contact.html">Contact</a></h2></td>
  		<td id="backSide">&nbsp;</td>
 	</tr>
 	<tr>
