--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -34,7 +34,7 @@
 		<h2 style="color: #4aaaa5; font-size: 4vh;">Connect With Me</h2>
 		<hr>
 		<a href="https://github.com/CadenMay0"><img src="assets/images/if_github_401441.png" style="height: 10vh; width: 10vh;" alt="Github"></a>
-		<a href="https://www.linkedin.com/in/joseph-mayo-4a6773144/"><img src="assets/images/if_linkedin_395524.png" style="height: 10vh; width: 10vh;" alt="Linkedin"></a>
+		<a href="https://www.linkedin.com/in/caden-mayo"><img src="assets/images/if_linkedin_395524.png" style="height: 10vh; width: 10vh;" alt="Linkedin"></a>
 		<a href="https://stackoverflow.com/users/8313831/c-mayo"><img src="assets/images/if_stackoverflow_273179.png" style="height: 10vh; width: 10vh;" alt="StackOverflow"></a>
 		</td>
 	</tr>
