--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  		<h2 style="color: #4aaaa5; font-size: 6vh;font-family: 'Atomic Age', cursive;">About Me</h2>
  		<hr>
  		<img id=imagic src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-1/p240x240/19702071_10213277125633213_7631345611309927163_n.jpg?oh=ada5c5938224c50efc10127e5ba9d384&amp;oe=5A0EA378" alt ="Picture of Caden Mayo" >
- 		<p style="font-family: 'CaveStoryRegular';">Most of the people visiting this page probably already know who I am. But in case you don't, My name is Caden Mayo and it's my dream to go into game design and programming. However dreams rarely come to fruition in my experience, so I'm working at getting a career and bettering myself in a productive and still enjoyable way. That is to say I'm working on learning full stack web development. As for things I like, I'm a major fan of video games, especially rpgs. Feel free to browse this site to see my work and get in contact with me!</p>
+ 		<p style="font-family: 'CaveStoryRegular';">My name is Caden Mayo and it's my dream to go into game design and programming. On the course of helping my dreams come to fruition, I'm working at getting a career and bettering myself in a productive and still enjoyable way. That is to say I'm working on learning full stack web development. As for things I like, I'm a major fan of video games, especially rpgs. Feel free to browse this site to see my work and get in contact with me!</p>
 		</td>
 		<td>&nbsp;</td>
 		<td id="contactLinks">
